# startup-manager

./: index.html  package-lock.json  package.json
src/: api.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: apps.rs  lib.rs  runner.rs
